--- a/vite-project/src/components/mainHome/mainHome.css
+++ b/vite-project/src/components/mainHome/mainHome.css
@@ -1,32 +1,35 @@
-main {
+.container-main {
     max-width: 800px;
     margin: 0 auto;
     padding: 30px;
   }
   
-  section {
+  .container-section {
     margin-bottom: 50px;
+    
   }
   
   h2 {
     color: #005082;
     margin-top: 0;
+    text-align: center;
   }
   
-  ul#retos {
+  ul.retos  {
     list-style: none;
     margin: 0;
     padding: 0;
   }
   
-  ul#retos li {
+  ul.retos  li {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     padding: 20px;
     margin-bottom: 20px;
+    text-align: center;
   }
   
-  ul#retos li h3 {
+  ul .retos li h3 {
     color: #005082;
     margin-top: 0;
   }
