--- a/vite-project/src/components/mainHome/mainHome.css
+++ b/vite-project/src/components/mainHome/mainHome.css
@@ -6,13 +6,28 @@
   
   .container-section {
     margin-bottom: 50px;
-    
+    background-color: #ffffff86;
+    padding: 10px 20px;
+    border-radius: 8px;
+    box-shadow: 1px 4px 4px #fff;
   }
   
   h2 {
     color: #005082;
     margin-top: 0;
     text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+
+  }
+  
+  h3 {
+    color: #005082;
+    margin-top: 0;
+    text-align: center;
+    font-weight: 700;
+    font-size: 25px;
+    padding-top: 15px;
   }
   
   ul.retos  {
@@ -22,14 +37,16 @@
   }
   
   ul.retos  li {
-    background-color: #fff;
+    background-color: #ffffff88;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
+    border-radius: 8px;
+    box-shadow: 1px 4px 4px #fff;
   }
   
-  ul .retos li h3 {
+  ul h4 {
     color: #005082;
     margin-top: 0;
   }
@@ -45,4 +62,6 @@
   
   .comenzar-reto:hover {
     background-color: #005082;
+    box-shadow: 1px 4px 4px #6a8fa7;
+    border: 1px solid #ffffff67;
   }
