--- a/vite-project/src/pages/login/estilos.css
+++ b/vite-project/src/pages/login/estilos.css
@@ -3,7 +3,7 @@ form{
     height: auto;
     border-radius: 8px;
     margin: 40px auto;
-    background-color: rgba(216, 213, 213, 0.342);
+    background-color: rgb(216, 213, 213);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +13,7 @@ form{
 h2{
     margin-top: 10px;
 }
+
 label{
     width: 320px;
     margin: 4px 0px;
