--- a/vite-project/src/pages/retos/components/retosEstilo.css
+++ b/vite-project/src/pages/retos/components/retosEstilo.css
@@ -1,7 +1,7 @@
 .card{
     width: 720px;
     height: 420px;
-    background-color: rgba(173, 173, 173, 0.192);
+    background-color: rgb(224, 218, 218);
     margin: 50px auto 50px auto;
     border-radius: 8px;
     display: flex;
@@ -21,6 +21,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 8px;
+    margin-top: 0px;
 }
 .a{
     width: 100%;
@@ -30,4 +31,20 @@
 .input{
     margin: auto;
     font-weight: bold;
+}
+
+.inputSubmit{
+    width: 100px;
+    height: 30px;
+    font-size: 1.2rem;
+    margin: auto;
+    font-weight: bold;
+    background-color: #005082;
+    color: white;
+}
+
+.inputSubmit:hover{
+    background-color: #bac1c5;
+    color: rgb(44, 44, 44);
+    box-shadow: 1px 4px 4px #005082;
 }
